# EnvPathShortcutTool

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  INDEXER_ALGORITHM.md
pathindex/: actions.py  cli.py  collectors.py  search.py  storage.py
